Finally fixed spacing issues on about section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6{
 	background-size: cover;
 }
 #about{
-	height:30vh;
+	height:50vh;
 }
 #about h3{
 	font-size:32px;
